--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,7 +4,7 @@ title = "Программирование"
 googleAnalytics = "UA-113025618-1"
 
 theme = "book"
-enableGitInfo = true
+enableGitInfo = false
 
 [params]
   BookRepo = "https://github.com/senior-sigan/fcs-programming-in-cpp"
